fixed overlap issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -432,6 +432,9 @@ table {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
+  .project-description.meshi + div {
+    margin-top: 160px !important;
+  }
   .case-studies a > img {
     width: 303px;
     height: 176px;
@@ -513,7 +516,6 @@ table {
   }
 
   .carousel {
-    position: absolute;
     top: 0;
     right: 0;
     left: 0;
@@ -847,6 +849,14 @@ table {
   .case-studies a > img {
     width: 380px;
     height: 218px;
+  }
+
+  .case-studies > section {
+    width: 50%;
+  }
+
+  .case-studies .text-description {
+    width: unset;
   }
 
   .final-product > .row {
@@ -1900,24 +1910,6 @@ section .mobile-linking a {
   z-index: 3;
   left: 0;
   right: 0;
-}
-
-@media only screen and (min-width: 320px) {
-  .project-description.meshi + div {
-    margin-top: 160px !important;
-  }
-}
-
-@media only screen and (min-width: 375px) {
-  .project-description.meshi + div {
-    margin-top: 120px !important;
-  }
-}
-
-@media only screen and (min-width: 426px) {
-  .project-description.meshi + div {
-    margin-top: 60px !important;
-  }
 }
 
 .caption {
